// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert snapshots should match for basic 1`] = `
.c2 {
  display: block;
  fill: currentColor;
  height: 24px;
  width: 24px;
}

.c2:hover {
  fill: #eee;
}

.c0 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  border-left: 5px solid hsl(0,57%,48%);
  box-shadow: 0 4px 6px hsla(0,0%,0%,0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: hsl(0,57%,63%);
  color: #ffffff;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 1rem 2.5rem 1rem 3rem;
  position: relative;
  width: 100%;
}

.c0 h2 {
  font-weight: bold;
  margin-bottom: 0.25rem;
  margin-right: 1.5rem;
}

.c0 > div {
  margin-top: 0.25rem;
}

.c1 {
  left: 1rem;
  position: absolute;
  top: 1.125rem;
}

<div
  className="c0"
  role="alert"
>
  <svg
    className="c1 c2"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0 9a1 1 0 0 1-1-1V8a1 1 0 0 1 2 0v4a1 1 0 0 1-1 1zm0 4a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
    />
  </svg>
  <h2>
    Login Error
  </h2>
  <div>
    This is an error
  </div>
</div>
`;

exports[`Alert snapshots should match with button 1`] = `
.c2 {
  display: block;
  fill: currentColor;
  height: 24px;
  width: 24px;
}

.c2:hover {
  fill: #eee;
}

.c4 {
  display: block;
  fill: currentColor;
  height: 12px;
  width: 12px;
}

.c4:hover {
  fill: #eee;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  line-height: 1;
  outline: none;
  padding: 0;
  height: 0.75rem;
  position: absolute;
  right: 1.5rem;
  top: 1.5rem;
  width: 0.75rem;
}

.c3::after {
  border-radius: 50%;
  content: '';
  left: 50%;
  padding: 1rem;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: background-color 0.25s ease-in;
  transition: background-color 0.25s ease-in;
}

.c3:hover::after {
  background-color: rgba(255,255,255,0.1);
}

.c5 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  border-left: 5px solid hsl(0,57%,48%);
  box-shadow: 0 4px 6px hsla(0,0%,0%,0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: hsl(0,57%,63%);
  color: #ffffff;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 1rem 2.5rem 1rem 3rem;
  position: relative;
  width: 100%;
}

.c0 h2 {
  font-weight: bold;
  margin-bottom: 0.25rem;
  margin-right: 1.5rem;
}

.c0 > div {
  margin-top: 0.25rem;
}

.c1 {
  left: 1rem;
  position: absolute;
  top: 1.125rem;
}

<div
  className="c0"
  role="alert"
>
  <svg
    className="c1 c2"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0 9a1 1 0 0 1-1-1V8a1 1 0 0 1 2 0v4a1 1 0 0 1-1 1zm0 4a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
    />
  </svg>
  <h2>
    Login Error
  </h2>
  <div>
    This is an error
  </div>
  <button
    className="c3"
    onClick={[Function]}
  >
    <svg
      className="c4"
      height="12"
      viewBox="0 0 212.982 212.982"
      width="12"
    >
      <path
        d="M131.804 106.491l75.936-75.936c6.99-6.99 6.99-18.323 0-25.312-6.99-6.99-18.322-6.99-25.312 0L106.491 81.18 30.554 5.242c-6.99-6.99-18.322-6.99-25.312 0-6.989 6.99-6.989 18.323 0 25.312l75.937 75.936-75.937 75.937c-6.989 6.99-6.989 18.323 0 25.312 6.99 6.99 18.322 6.99 25.312 0l75.937-75.937 75.937 75.937c6.989 6.99 18.322 6.99 25.312 0 6.99-6.99 6.99-18.322 0-25.312l-75.936-75.936z"
      />
    </svg>
    <span
      className="c5"
    >
      Close Alert
    </span>
  </button>
</div>
`;
